--- a/src/main/resources/classpath/havis.capture.adapter.camera.properties
+++ b/src/main/resources/classpath/havis.capture.adapter.camera.properties
@@ -1,3 +1,3 @@
-#havis.custom.harting.camera.configFile=conf/havis/capture/adapter/camera/config.json
-#havis.custom.harting.camera.v4l=v4l
+#havis.capture.adapter.camera.configFile=conf/havis/capture/adapter/camera/config.json
+#havis.capture.adapter.camera.v4l=v4l
 
